antlr/src/MDParser.cpp

// Generated from MDParser.g4 by ANTLR 4.7.1



#include "MDParser.h"



#include <string>
#include <vector>

#include "ASTNode.h"



using namespace antlrcpp;
using namespace antlr4;

MDParser::MDParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MDParser::~MDParser() {
  delete _interpreter;
}

std::string MDParser::getGrammarFileName() const {
  return "MDParser.g4";
}

const std::vector<std::string>& MDParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MDParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MDParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDParser::FuncsContext* MDParser::ProgramContext::funcs() {
  return getRuleContext<MDParser::FuncsContext>(0);
}

tree::TerminalNode* MDParser::ProgramContext::EOF() {
  return getToken(MDParser::EOF, 0);
}


size_t MDParser::ProgramContext::getRuleIndex() const {
  return MDParser::RuleProgram;
}


MDParser::ProgramContext* MDParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MDParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    dynamic_cast<ProgramContext *>(_localctx)->funcsContext = funcs(0);
    setState(33);
    match(MDParser::EOF);

                dynamic_cast<ProgramContext *>(_localctx)->node =  dynamic_cast<ProgramContext *>(_localctx)->funcsContext->node;
              
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncsContext ------------------------------------------------------------------

MDParser::FuncsContext::FuncsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDParser::FuncContext* MDParser::FuncsContext::func() {
  return getRuleContext<MDParser::FuncContext>(0);
}

MDParser::FuncsContext* MDParser::FuncsContext::funcs() {
  return getRuleContext<MDParser::FuncsContext>(0);
}

MDParser::FuncDecContext* MDParser::FuncsContext::funcDec() {
  return getRuleContext<MDParser::FuncDecContext>(0);
}

MDParser::GVarDefContext* MDParser::FuncsContext::gVarDef() {
  return getRuleContext<MDParser::GVarDefContext>(0);
}


size_t MDParser::FuncsContext::getRuleIndex() const {
  return MDParser::RuleFuncs;
}



MDParser::FuncsContext* MDParser::funcs() {
   return funcs(0);
}

MDParser::FuncsContext* MDParser::funcs(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MDParser::FuncsContext *_localctx = _tracker.createInstance<FuncsContext>(_ctx, parentState);
  MDParser::FuncsContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, MDParser::RuleFuncs, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);

                dynamic_cast<FuncsContext *>(_localctx)->node =  ProgramNode::make({});
              
    _ctx->stop = _input->LT(-1);
    setState(53);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(51);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<FuncsContext>(parentContext, parentState);
          _localctx->part = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleFuncs);
          setState(39);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(40);
          dynamic_cast<FuncsContext *>(_localctx)->funcContext = func();

                                dynamic_cast<FuncsContext *>(_localctx)->node =  dynamic_cast<FuncsContext *>(_localctx)->part->node;
                                _localctx->node->funcs_.push_back(dynamic_cast<FuncsContext *>(_localctx)->funcContext->node);
                              
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<FuncsContext>(parentContext, parentState);
          _localctx->part = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleFuncs);
          setState(43);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(44);
          dynamic_cast<FuncsContext *>(_localctx)->funcDecContext = funcDec();

                                dynamic_cast<FuncsContext *>(_localctx)->node =  dynamic_cast<FuncsContext *>(_localctx)->part->node;
                                _localctx->node->funcs_.push_back(dynamic_cast<FuncsContext *>(_localctx)->funcDecContext->node);
                              
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<FuncsContext>(parentContext, parentState);
          _localctx->part = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleFuncs);
          setState(47);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(48);
          dynamic_cast<FuncsContext *>(_localctx)->gVarDefContext = gVarDef();

                                dynamic_cast<FuncsContext *>(_localctx)->node =  dynamic_cast<FuncsContext *>(_localctx)->part->node;
                                _localctx->node->funcs_.push_back(dynamic_cast<FuncsContext *>(_localctx)->gVarDefContext->node);
                              
          break;
        }

        } 
      }
      setState(55);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

MDParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDParser::FuncContext::INT() {
  return getToken(MDParser::INT, 0);
}

tree::TerminalNode* MDParser::FuncContext::Identifier() {
  return getToken(MDParser::Identifier, 0);
}

MDParser::ArgsContext* MDParser::FuncContext::args() {
  return getRuleContext<MDParser::ArgsContext>(0);
}

MDParser::StmtSeqContext* MDParser::FuncContext::stmtSeq() {
  return getRuleContext<MDParser::StmtSeqContext>(0);
}


size_t MDParser::FuncContext::getRuleIndex() const {
  return MDParser::RuleFunc;
}


MDParser::FuncContext* MDParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 4, MDParser::RuleFunc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(MDParser::INT);
    setState(57);
    dynamic_cast<FuncContext *>(_localctx)->identifierToken = match(MDParser::Identifier);
    setState(58);
    match(MDParser::LPAREN);
    setState(59);
    dynamic_cast<FuncContext *>(_localctx)->argsContext = args(0);
    setState(60);
    match(MDParser::RPAREN);
    setState(61);
    match(MDParser::LBRACK);
    setState(62);
    dynamic_cast<FuncContext *>(_localctx)->stmtSeqContext = stmtSeq(0);
    setState(63);
    match(MDParser::RBRACK);

                dynamic_cast<FuncContext *>(_localctx)->node =  FunctionNode::make(ExprType::Int, (dynamic_cast<FuncContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<FuncContext *>(_localctx)->identifierToken->getText() : ""), dynamic_cast<FuncContext *>(_localctx)->argsContext->nodes, dynamic_cast<FuncContext *>(_localctx)->stmtSeqContext->node);
              
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDecContext ------------------------------------------------------------------

MDParser::FuncDecContext::FuncDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDParser::FuncDecContext::INT() {
  return getToken(MDParser::INT, 0);
}

tree::TerminalNode* MDParser::FuncDecContext::Identifier() {
  return getToken(MDParser::Identifier, 0);
}

MDParser::ArgsContext* MDParser::FuncDecContext::args() {
  return getRuleContext<MDParser::ArgsContext>(0);
}


size_t MDParser::FuncDecContext::getRuleIndex() const {
  return MDParser::RuleFuncDec;
}


MDParser::FuncDecContext* MDParser::funcDec() {
  FuncDecContext *_localctx = _tracker.createInstance<FuncDecContext>(_ctx, getState());
  enterRule(_localctx, 6, MDParser::RuleFuncDec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(MDParser::INT);
    setState(67);
    dynamic_cast<FuncDecContext *>(_localctx)->identifierToken = match(MDParser::Identifier);
    setState(68);
    match(MDParser::LPAREN);
    setState(69);
    dynamic_cast<FuncDecContext *>(_localctx)->argsContext = args(0);
    setState(70);
    match(MDParser::RPAREN);
    setState(71);
    match(MDParser::SEMICOLON);

                dynamic_cast<FuncDecContext *>(_localctx)->node =  FunctionNode::make(ExprType::Int, (dynamic_cast<FuncDecContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<FuncDecContext *>(_localctx)->identifierToken->getText() : ""), dynamic_cast<FuncDecContext *>(_localctx)->argsContext->nodes, nullptr);
              
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GVarDefContext ------------------------------------------------------------------

MDParser::GVarDefContext::GVarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDParser::GVarDefContext::INT() {
  return getToken(MDParser::INT, 0);
}

tree::TerminalNode* MDParser::GVarDefContext::Identifier() {
  return getToken(MDParser::Identifier, 0);
}

MDParser::ExprContext* MDParser::GVarDefContext::expr() {
  return getRuleContext<MDParser::ExprContext>(0);
}


size_t MDParser::GVarDefContext::getRuleIndex() const {
  return MDParser::RuleGVarDef;
}


MDParser::GVarDefContext* MDParser::gVarDef() {
  GVarDefContext *_localctx = _tracker.createInstance<GVarDefContext>(_ctx, getState());
  enterRule(_localctx, 8, MDParser::RuleGVarDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(74);
      match(MDParser::INT);
      setState(75);
      dynamic_cast<GVarDefContext *>(_localctx)->identifierToken = match(MDParser::Identifier);
      setState(76);
      match(MDParser::SEMICOLON);

                  dynamic_cast<GVarDefContext *>(_localctx)->node =  GlobalVarDefNode::make(ExprType::Int, (dynamic_cast<GVarDefContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<GVarDefContext *>(_localctx)->identifierToken->getText() : ""));
                
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(78);
      match(MDParser::INT);
      setState(79);
      dynamic_cast<GVarDefContext *>(_localctx)->identifierToken = match(MDParser::Identifier);
      setState(80);
      match(MDParser::ASSIGN);
      setState(81);
      dynamic_cast<GVarDefContext *>(_localctx)->exprContext = expr(0);
      setState(82);
      match(MDParser::SEMICOLON);

                  dynamic_cast<GVarDefContext *>(_localctx)->node =  GlobalVarDefNode::make(ExprType::Int, (dynamic_cast<GVarDefContext *>(_localctx)->identifierToken != nullptr ? dynamic_cast<GVarDefContext *>(_localctx)->identifierToken->getText() : ""), (dynamic_cast<GVarDefContext *>(_localctx)->exprContext != nullptr ? _input->getText(dynamic_cast<GVarDefContext *>(_localctx)->exprContext->start, dynamic_cast<GVarDefContext *>(_localctx)->exprContext->stop) : nullptr));
                
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtSeqContext ------------------------------------------------------------------

MDParser::StmtSeqContext::StmtSeqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDParser::StmtContext* MDParser::StmtSeqContext::stmt() {
  return getRuleContext<MDParser::StmtContext>(0);
}

MDParser::StmtSeqContext* MDParser::StmtSeqContext::stmtSeq() {
  return getRuleContext<MDParser::StmtSeqContext>(0);
}


size_t MDParser::StmtSeqContext::getRuleIndex() const {
  return MDParser::RuleStmtSeq;
}



MDParser::StmtSeqContext* MDParser::stmtSeq() {
   return stmtSeq(0);
}

MDParser::StmtSeqContext* MDParser::stmtSeq(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MDParser::StmtSeqContext *_localctx = _tracker.createInstance<StmtSeqContext>(_ctx, parentState);
  MDParser::StmtSeqContext *previousContext = _localctx;
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, MDParser::RuleStmtSeq, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);

                dynamic_cast<StmtSeqContext *>(_localctx)->node =  StmtSeqNode::make({}, true);
              
    _ctx->stop = _input->LT(-1);
    setState(96);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<StmtSeqContext>(parentContext, parentState);
        _localctx->part = previousContext;
        pushNewRecursionContext(_localctx, startState, RuleStmtSeq);
        setState(90);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(91);
        dynamic_cast<StmtSeqContext *>(_localctx)->stmtContext = stmt();

                              dynamic_cast<StmtSeqContext *>(_localctx)->node =  dynamic_cast<StmtSeqContext *>(_localctx)->part->node;
                              _localctx->node->stmts_.push_back(dynamic_cast<StmtSeqContext *>(_localctx)->stmtContext->node);
                             
      }
      setState(98);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

MDParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDParser::ExprContext* MDParser::StmtContext::expr() {
  return getRuleContext<MDParser::ExprContext>(0);
}

MDParser::VarDefsContext* MDParser::StmtContext::varDefs() {
  return getRuleContext<MDParser::VarDefsContext>(0);
}

tree::TerminalNode* MDParser::StmtContext::IF() {
  return getToken(MDParser::IF, 0);
}

std::vector<MDParser::StmtContext *> MDParser::StmtContext::stmt() {
  return getRuleContexts<MDParser::StmtContext>();
}

MDParser::StmtContext* MDParser::StmtContext::stmt(size_t i) {
  return getRuleContext<MDParser::StmtContext>(i);
}

tree::TerminalNode* MDParser::StmtContext::ELSE() {
  return getToken(MDParser::ELSE, 0);
}

tree::TerminalNode* MDParser::StmtContext::WHILE() {
  return getToken(MDParser::WHILE, 0);
}

tree::TerminalNode* MDParser::StmtContext::DO() {
  return getToken(MDParser::DO, 0);
}

tree::TerminalNode* MDParser::StmtContext::FOR() {
  return getToken(MDParser::FOR, 0);
}

std::vector<MDParser::MayExprContext *> MDParser::StmtContext::mayExpr() {
  return getRuleContexts<MDParser::MayExprContext>();
}

MDParser::MayExprContext* MDParser::StmtContext::mayExpr(size_t i) {
  return getRuleContext<MDParser::MayExprContext>(i);
}

tree::TerminalNode* MDParser::StmtContext::RETURN() {
  return getToken(MDParser::RETURN, 0);
}

tree::TerminalNode* MDParser::StmtContext::BREAK() {
  return getToken(MDParser::BREAK, 0);
}

tree::TerminalNode* MDParser::StmtContext::CONTINUE() {
  return getToken(MDParser::CONTINUE, 0);
}

MDParser::StmtSeqContext* MDParser::StmtContext::stmtSeq() {
  return getRuleContext<MDParser::StmtSeqContext>(0);
}


size_t MDParser::StmtContext::getRuleIndex() const {
  return MDParser::RuleStmt;
}


MDParser::StmtContext* MDParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 12, MDParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(179);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(99);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(100);
      match(MDParser::SEMICOLON);

                  dynamic_cast<StmtContext *>(_localctx)->node =  InvokeNode::make(dynamic_cast<StmtContext *>(_localctx)->exprContext->node);
                
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(103);
      dynamic_cast<StmtContext *>(_localctx)->varDefsContext = varDefs(0);
      setState(104);
      match(MDParser::SEMICOLON);

                  dynamic_cast<StmtContext *>(_localctx)->node =  StmtSeqNode::make(dynamic_cast<StmtContext *>(_localctx)->varDefsContext->nodes);
                
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(107);
      match(MDParser::IF);
      setState(108);
      match(MDParser::LPAREN);
      setState(109);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(110);
      match(MDParser::RPAREN);
      setState(111);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();

                  dynamic_cast<StmtContext *>(_localctx)->node =  IfThenElseNode::make(dynamic_cast<StmtContext *>(_localctx)->exprContext->node, dynamic_cast<StmtContext *>(_localctx)->stmtContext->node);
                
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(114);
      match(MDParser::IF);
      setState(115);
      match(MDParser::LPAREN);
      setState(116);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(117);
      match(MDParser::RPAREN);
      setState(118);
      dynamic_cast<StmtContext *>(_localctx)->thenCase = stmt();
      setState(119);
      match(MDParser::ELSE);
      setState(120);
      dynamic_cast<StmtContext *>(_localctx)->elseCase = stmt();

                  dynamic_cast<StmtContext *>(_localctx)->node =  IfThenElseNode::make(dynamic_cast<StmtContext *>(_localctx)->exprContext->node, dynamic_cast<StmtContext *>(_localctx)->thenCase->node, dynamic_cast<StmtContext *>(_localctx)->elseCase->node);
                
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(123);
      match(MDParser::WHILE);
      setState(124);
      match(MDParser::LPAREN);
      setState(125);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(126);
      match(MDParser::RPAREN);
      setState(127);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();

                  dynamic_cast<StmtContext *>(_localctx)->node =  WhileNode::make(dynamic_cast<StmtContext *>(_localctx)->exprContext->node, dynamic_cast<StmtContext *>(_localctx)->stmtContext->node);
                
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(130);
      match(MDParser::DO);
      setState(131);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();
      setState(132);
      match(MDParser::WHILE);
      setState(133);
      match(MDParser::LPAREN);
      setState(134);
      dynamic_cast<StmtContext *>(_localctx)->exprContext = expr(0);
      setState(135);
      match(MDParser::RPAREN);
      setState(136);
      match(MDParser::SEMICOLON);

                  dynamic_cast<StmtContext *>(_localctx)->node =  DoWhileNode::make(dynamic_cast<StmtContext *>(_localctx)->exprContext->node, dynamic_cast<StmtContext *>(_localctx)->stmtContext->node);
                
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(139);
      match(MDParser::FOR);
      setState(140);
      match(MDParser::LPAREN);
      setState(141);
      dynamic_cast<StmtContext *>(_localctx)->init = mayExpr();
      setState(142);
      match(MDParser::SEMICOLON);
      setState(143);
      dynamic_cast<StmtContext *>(_localctx)->cond = mayExpr();
      setState(144);
      match(MDParser::SEMICOLON);
      setState(145);
      dynamic_cast<StmtContext *>(_localctx)->incr = mayExpr();
      setState(146);
      match(MDParser::RPAREN);
      setState(147);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();

                  std::shared_ptr<StmtNode> init, incr;
                  std::shared_ptr<ExprNode> cond;
                  if (dynamic_cast<StmtContext *>(_localctx)->init->node) init = InvokeNode::make(dynamic_cast<StmtContext *>(_localctx)->init->node); else init = StmtSeqNode::make({});
                  if (dynamic_cast<StmtContext *>(_localctx)->cond->node) cond = dynamic_cast<StmtContext *>(_localctx)->cond->node; else cond = IntegerNode::make(1);
                  if (dynamic_cast<StmtContext *>(_localctx)->incr->node) incr = InvokeNode::make(dynamic_cast<StmtContext *>(_localctx)->incr->node); else incr = StmtSeqNode::make({});
                  dynamic_cast<StmtContext *>(_localctx)->node =  ForNode::make(init, cond, incr, dynamic_cast<StmtContext *>(_localctx)->stmtContext->node);
                
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(150);
      match(MDParser::FOR);
      setState(151);
      match(MDParser::LPAREN);
      setState(152);
      dynamic_cast<StmtContext *>(_localctx)->varDefsContext = varDefs(0);
      setState(153);
      match(MDParser::SEMICOLON);
      setState(154);
      dynamic_cast<StmtContext *>(_localctx)->cond = mayExpr();
      setState(155);
      match(MDParser::SEMICOLON);
      setState(156);
      dynamic_cast<StmtContext *>(_localctx)->incr = mayExpr();
      setState(157);
      match(MDParser::RPAREN);
      setState(158);
      dynamic_cast<StmtContext *>(_localctx)->stmtContext = stmt();
